--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,9 +16,34 @@ body {
     display:flex;
     justify-content: space-between;
     width: 100%;
-    max-width: 500px;
+    max-width: 400px;
+    margin-bottom: 1rem;
 }
 
 .card-blank {
     background-color: silver;
 }
+
+
+
+#grid {
+  display: grid;
+  gap:10px;
+  width: 90vmin;
+  max-width: 400px;
+ 
+
+ 
+  
+     
+}
+#grid img {
+    width: 100%;
+    aspect-ratio: 1/1;
+
+   
+    
+}
+
+
+
